# ForestFirePrediction

./: Dockerfile  LICENSE  Procfile  README.md  application.py  pyproject.toml
